# identifying-pipeline-corrosion-risk-using-ml-for-integrity-management

./: 12_corrosion_risk_production.py  12_corrosion_risk_ranking_blog.md  12_corrosion_risk_ranking_blog_linkedin_post.md  12_corrosion_risk_visualizations.py  README.md  article.md  pyproject.toml
